# final-project-student-information-system-Naokotani

./: .gdb_history  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.org  SIS  SIS.h  SIS.h.in  cmake_install.cmake  compile_commands.json  tests
.cache/clangd/index/: ClassList.cpp.1AE95FB280830128.idx  ClassList.h.46911114BDEC2E08.idx  ClassListInput.cpp.6DC54CB8B322FCE0.idx  MainLoop.h.51A63E418C4DD1A6.idx  Mark.cpp.8840F32920C89A00.idx  Print.h.BFC16F8E9A5E1E1B.idx  SIS.h.7759DD5EE9B330D7.idx  Save.h.DD4804EEA63E799F.idx  Student.cpp.8797187E5B47D8A3.idx  Student.h.760FC5B6A02AAFFC.idx  StudentInput.cpp.3166675CCC3F0AE4.idx  calculate_mark.cpp.B3917CF2563CDBF6.idx  calculate_mark.cxx.AE53E91135C6D939.idx  delete_student.cpp.0274C95A4BC8CE32.idx  input_class.cpp.A3B3379C9426542B.idx  input_class.cxx.650D69E802ED9A30.idx  input_student.cpp.CE5E7BFF90FF5F86.idx  input_student.cxx.6BD5EF9F5C58285F.idx  main.cpp.780335CFA3E59BC2.idx  main.cxx.ADE071C4F37CB768.idx  mark.cpp.67E16F615F1A1EAD.idx  print_class.cpp.E3CB05D7E204D40A.idx  test.cpp.2E739E9515C86BC8.idx  tests.h.769AF6357FB25987.idx
Calculations/: calculations.cxx  calculations.h
data/: Gym.org  Gym.txt  History.org  History.txt  Math.org  Math.txt  PsyEd.org  PsyEd.txt
src/: ClassList.cpp  ClassList.h  MainLoop.h  Mark.cpp  Print.h  Save.h  Student.cpp  Student.h  main.cpp
test/: test.cpp  tests.h
